fixed bug with cover-images not showing

--- a/assets/css/admin/general.css
+++ b/assets/css/admin/general.css
@@ -266,6 +266,12 @@ body[class*="roxtar-welcome"] #wpcontent, body[class*="roxtar-options_page"] #wp
   color:var(--background-color);
 }
 
-.components-resizable-box__container {
-  background-color:#efefef;
+.block-library-spacer__resize-container {
+  background:repeating-linear-gradient(
+    45deg,
+    #f8f8f8,
+    #f8f8f8 20px,
+    #ebebeb 20px,
+    #ebebeb 40px
+  );
 }
